--- a/src/main/schedulemanager/views/Login.fxml
+++ b/src/main/schedulemanager/views/Login.fxml
@@ -9,7 +9,8 @@
       <Label fx:id="usernameLabel" layoutX="225.0" layoutY="85.0" text="Username" />
       <TextField fx:id="passwordText" layoutX="225.0" layoutY="164.0" />
       <Label fx:id="passwordLabel" layoutX="225.0" layoutY="141.0" text="Password" />
-      <Button fx:id="loginButton" layoutX="274.0" layoutY="234.0" mnemonicParsing="false" onAction="#login" text="Login" />
+      <Button fx:id="loginButton" layoutX="269.0" layoutY="253.0" mnemonicParsing="false" onAction="#login" text="Login" />
       <Label fx:id="zoneIDLabel" layoutX="36.0" layoutY="25.0" text="ZoneID" />
+      <Button layoutX="507.0" layoutY="21.0" mnemonicParsing="false" onAction="#navigateToSignUp" text="New User" />
    </children>
 </AnchorPane>
