--- a/src/main/schedulemanager/views/ReportUserSchedule.fxml
+++ b/src/main/schedulemanager/views/ReportUserSchedule.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.schedulemanager.controllers.ReportUserSchedule">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.schedulemanager.controllers.ReportUserSchedule">
    <children>
       <Label layoutX="34.0" layoutY="23.0" text="Schedule">
          <font>
@@ -23,7 +19,7 @@
       </Label>
       <Label layoutX="35.0" layoutY="115.0" />
       <ComboBox fx:id="userComboBox" layoutX="111.0" layoutY="151.0" onAction="#userSelected" prefWidth="150.0" />
-      <Label layoutX="35.0" layoutY="155.0" text="Contact:" />
+      <Label layoutX="35.0" layoutY="155.0" text="User:" />
       <TableView fx:id="scheduleTable" layoutX="34.0" layoutY="257.0" prefHeight="326.0" prefWidth="926.0">
         <columns>
           <TableColumn fx:id="apptIdClmn" prefWidth="106.39996337890625" text="AppointmentID" />
